# unigen

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  copilot-instructions.md  drizzle.config.ts  electron-builder.mjs  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/actions/init-template-with-renderer/: action.yml
.github/workflows/: ci.yml  compile-and-test.yml  deploy.yml  sync-wiki.yml
buildResources/: icon.icns
docs/: Developer-Guide.en.md  Developer-Guide.md  FAQ.md  Getting-Started.en.md  Getting-Started.md  Home.en.md  Home.md  Local-Setup.md  Logic-Oriented-AI.en.md  Logic-Oriented-AI.md  README.cn.md  Roadmap.en.md  Roadmap.md  Using-Workflows.md  _Sidebar.md  dyn-panel-dev.md  loom.md  planner.en.md  planner.md  plugin.md  prism.en.md  prism.md  ui-ast.md
example/: 20260723.json
messages/: en.json  es.json  jp.json  ko.json  ru.json  zh-cn.json  zh-tw.json
project.inlang/: settings.json
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: git.rs  info.rs  mod.rs  project.rs  store.rs
src-tauri/src/mqtt/: controller.rs  service.rs
src-tauri/src/state/: app_handle.rs  app_states.rs  args.rs  mod.rs
src-tauri/src/utils/: appmode.rs  filelock.rs  mod.rs  sql.rs  trace.rs
src/lib/: index.ts
src/lib/comp/: LeftTabs.svelte  Paneltoggle.svelte  Sidebar.svelte  (+3 more)
src/routes/: +layout.svelte  +page.svelte  view.svelte
tests/: e2e.spec.ts  type.ts
tests/common/: index.ts
tests/main/: iotype.spec.ts
(+146 files in other folders)
