[package]
name = "unigen"
version = "0.1.0"
description = "generative task planning and execution tool"
authors = ["masol.li@gmail.com"]
edition = "2021"

[[bin]]
name = "unigen"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unigen_lib"
#crate-type = ["staticlib", "cdylib", "rlib"]
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.4", features = ["rt-multi-thread", "sync", "macros"] }
clap = { version = "4.5.48", features = ["derive"] }
tempfile = "3.23.0"
tracing = { version = "0.1.41", features = ["release_max_level_warn"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
sys-locale = "0.3.2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["sqlite"] }
parking_lot = "0.12.5"
git2 = "0.20.2"
fs2 = "0.4.3"
rumqttd = "0.20.0"
toml = "0.9.8"
libc = "0.2.177"
rumqttc = "0.25.0"
tauri-plugin-http = "2"
